--- a/src/components/Footer/styles.module.scss
+++ b/src/components/Footer/styles.module.scss
@@ -1,7 +1,6 @@
 .footer {
-    width: 100vw;
+    width: 100%;
     box-shadow: 1px -5px 7px 1px rgba(0,0,0,0.75);
-    // background-color: #FCCC3A;
     background: -webkit-linear-gradient(90deg, #ffec70,#ffdd00,#ffdd00);
     background: linear-gradient(90deg, #ffec70,#ffdd00,#ffdd00);
     
@@ -13,7 +12,6 @@
     font-family: 'Nerko One', cursive;
     font-size: 3rem;
 }
-
 
 
 @media (min-width: 980px) {
