--- a/src/components/Header/styles.module.scss
+++ b/src/components/Header/styles.module.scss
@@ -1,49 +1,41 @@
 .header {
-    width: 100vw;
+    width: 100%;
     background: -webkit-linear-gradient(90deg, #ffec70,#ffdd00,#ffdd00);
     background: linear-gradient(90deg, #ffec70,#ffdd00,#ffdd00);
-
     flex-grow: 0;
+
+    .caption {
+        font-family: 'Nerko One', cursive;
+        font-size: 3rem;
+    }
+
+    .icon {
+        font-size: 1.2rem;
+        position: relative;
+    }
+
+    .textUnderIcon {
+        font-size: .8rem;
+    }
+
+    .stickerAddProducts {
+        padding: 2px 4.5px 1px 4px;
+        font-weight: 700;
+        box-shadow: 0 0 0 2px #fff;
+        background: #FF7E31;
+        border-radius: 50px;
+        align-items: center;
+        color: #fff;
+        display: inline-flex;
+        font-size: 13px;
+        height: 15px;
+        justify-content: center;
+        line-height: 13px;
+        min-width: 16px;
+        text-align: center;
+    
+        position: absolute;
+        top: -.5rem;
+        left: 1.6rem;
+    }
 }
-
-button {
-    border: none;
-    background-color: transparent;
-}
-
-.caption {
-    font-family: 'Nerko One', cursive;
-    font-size: 3rem;
-}
-
-.icon {
-    font-size: 1.2rem;
-    position: relative;
-}
-
-.textUnderIcon {
-    font-size: .8rem;
-}
-
-.stickerAddProducts {
-    padding: 2px 4.5px 1px 4px;
-    font-weight: 700;
-    box-shadow: 0 0 0 2px #fff;
-    background: #FF7E31;
-    border-radius: 50px;
-    align-items: center;
-    color: #fff;
-    display: inline-flex;
-    font-size: 13px;
-    height: 15px;
-    justify-content: center;
-    line-height: 13px;
-    min-width: 16px;
-    text-align: center;
-
-    position: absolute;
-    top: -.5rem;
-    left: 1.6rem;
-}
-
-
